# lammps

./: SECURITY.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  build_tarball.sh  copilot-instructions.md  release_steps.md  update_release_docs.sh
.github/workflows/: check-cpp23.yml  check-gnu-make.yml  check-vla.yml  codeql-analysis.yml  compile-msvc.yml  coverity.yml  full-regression.yml  lammps-gui-flatpak.yml  quick-regression.yml  style-check.yml  unittest-arm64.yml  unittest-linux.yml  unittest-macos.yml  unittest-single.yml
cmake/: CMakeLists.txt  FindLAMMPS.cmake.in  LAMMPSConfig.cmake.in
cmake/Modules/: LAMMPSInterfacePlugin.cmake  Testing.cmake  Tools.cmake
cmake/packaging/: MacOSXBundleInfo.plist.in  build_linux_tgz.sh  build_macos_dmg.sh  lammps-gui.icns  linux_wrapper.sh  org.lammps.lammps-gui.yml
cmake/presets/: all_off.cmake  all_on.cmake  elcapitan_kokkos.cmake  hip_amd.cmake  kokkos-hip.cmake  kokkos-sycl-intel.cmake  mingw-cross.cmake  most.cmake  nolib.cmake  windows.cmake
doc/: Makefile  lammps.1
doc/doxygen/: Doxyfile.in
doc/src/: Bibliography.rst  Build_basics.rst  Build_cmake.rst  Build_development.rst  Build_extras.rst  Build_link.rst  Build_make.rst  Build_package.rst  Build_prerequisites.rst  Build_settings.rst  Classes.rst  Classes_atom.rst  Classes_cite.rst  Classes_input.rst  Classes_lammps.rst  Commands_all.rst  Commands_bond.rst  Commands_compute.rst  Commands_fix.rst  Commands_pair.rst  Commands_removed.rst  Developer.rst  Developer_code_design.rst  Developer_internal.rst  Developer_notes.rst  Developer_org.rst  Developer_platform.rst  Developer_plugins.rst  Developer_unittest.rst  Developer_updating.rst  Errors_details.rst  Errors_messages.rst  Errors_warnings.rst  Examples.rst  Fortran.rst  Howto_cmake.rst  Howto_lammps_gui.rst  Howto_mdi.rst  Howto_viz.rst  Install_git.rst  (+88 more)
doc/utils/: check-styles.py  requirements.txt
examples/: README
examples/BROWNIAN/: in.selfalign_collective_dipole.run  in.selfalign_collective_quat.run
examples/fire/: README
examples/multi/: in.colloid  in.granular
examples/plugins/: CMakeLists.txt
examples/rigid/: in.rigid  in.rigid.atomfile  in.rigid.atomvar  in.rigid.early  in.rigid.nve  in.rigid.nve.early  in.rigid.property  in.rigid.tnr
examples/ttm/: Fe_mm.eam.fs  in.ttm  in.ttm.grid  in.ttm.thermal  log.5Nov25.ttm.g++.1  log.5Nov25.ttm.g++.4  log.5Nov25.ttm.grid.g++.1  log.5Nov25.ttm.grid.g++.4  log.5Nov25.ttm.thermal.g++.1  log.5Nov25.ttm.thermal.g++.4  props.in
examples/wall/: in.wall.harmonic.2d  in.wall.harmonic.outside.2d  in.wall.harmonic.returned.2d
fortran/: lammps.f90
lib/: README
lib/colvars/: README
lib/gpu/: README  lal_base_charge.cpp  lal_base_charge.h  lal_born_coul_long_cs.cu  lal_born_coul_long_ext.cpp  lal_device.cpp  lal_device.h  lal_neighbor.cpp  lal_neighbor.h  lal_neighbor_gpu.cu  lal_neighbor_shared.cpp  lal_yukawa_colloid.cpp
lib/h5md/: README
lib/kokkos/: Makefile.kokkos
lib/lepton/: README.md
lib/qmmm/: Makefile.gfortran  Makefile.ifort  README
python/lammps/: core.py
src/: .gitignore  Depend.sh  Make.sh  Makefile  Purge.list  accelerator_kokkos.h  accelerator_omp.h  angle.h  angle_deprecated.cpp  angle_hybrid.cpp  atom.cpp  atom.h  atom_masks.h  atom_vec.h  atom_vec_hybrid.cpp  balance.cpp  bond.h  bond_deprecated.cpp  bond_hybrid.cpp  citeme.cpp  citeme.h  comm.cpp  comm.h  comm_brick.cpp  comm_brick.h  comm_tiled.cpp  comm_tiled.h  compute.cpp  compute.h  compute_centroid_stress_atom.cpp  compute_chunk_atom.cpp  compute_chunk_atom.h  compute_deprecated.cpp  compute_rdf.cpp  compute_reduce.cpp  compute_reduce.h  compute_temp_com.cpp  compute_temp_com.h  create_box.cpp  delete_atoms.cpp  (+127 more)
src/AMOEBA/: amoeba_convolution.cpp
src/APIP/: Install.sh  README
src/ASPHERE/: pair_gayberne.cpp
src/BOCS/: fix_bocs.cpp
src/BPM/: bond_bpm.cpp  bond_bpm_spring_plastic.cpp
src/BROWNIAN/: fix_align_self.cpp  fix_align_self.h  fix_propel_self.cpp  fix_propel_selfalign.cpp  fix_propel_selfalign.h
src/CLASS2/: angle_class2.h  bond_class2.h  dihedral_class2.h  improper_class2.h
src/COLVARS/: Install.sh  colvarproxy_lammps.h  fix_colvars.cpp
src/COMPRESS/: Install.sh
src/DIELECTRIC/: atom_vec_dielectric.cpp
src/DIFFRACTION/: compute_saed.cpp  compute_xrd.cpp
src/DPD-MESO/: pair_edpd.cpp  pair_mdpd.cpp  pair_tdpd.cpp
src/DPD-REACT/: fix_shardlow.cpp  pair_multi_lucy.cpp  pair_multi_lucy_rx.cpp
src/EFF/: atom_vec_electron.cpp
src/ELECTRODE/: Install.sh  pppm_electrode.cpp
src/EXTRA-COMPUTE/: compute_adf.cpp  compute_ave_sphere_atom.cpp  compute_composition_atom.cpp  compute_efield_wolf_atom.cpp  compute_slcsa_atom.cpp  compute_stress_cartesian.cpp  compute_stress_cylinder.cpp  compute_stress_spherical.cpp
src/EXTRA-FIX/: fix_addtorque_group.cpp  fix_addtorque_group.h  fix_ave_correlate_long.cpp  fix_electron_stopping_fit.cpp  fix_filter_corotate.cpp  fix_flow_gauss.cpp  fix_gjf.cpp  fix_nonaffine_displacement.cpp  fix_pafi.cpp  fix_rhok.cpp  fix_ti_spring.cpp  fix_ttm.cpp  fix_ttm.h  fix_ttm_grid.cpp  fix_ttm_mod.cpp  fix_ttm_thermal.cpp  fix_ttm_thermal.h  fix_wall_flow.cpp
src/EXTRA-MOLECULE/: dihedral_fourier.cpp  dihedral_fourier.h  dihedral_table_cut.cpp
src/EXTRA-PAIR/: pair_dispersion_d3.cpp  pair_e3b.cpp  pair_lj96_cut.cpp  pair_lj96_cut.h  pair_lj_relres.cpp  pair_momb.cpp
src/GPU/: Install.sh  fix_gpu.cpp  gpu_extra.h  pair_born_coul_long_gpu.cpp  pair_lj_charmm_coul_long_gpu.cpp
src/GRANULAR/: fix_addtorque_atom.cpp  fix_addtorque_atom.h  fix_settorque_atom.cpp  fix_settorque_atom.h  gran_sub_mod_normal.cpp  gran_sub_mod_rolling.cpp  gran_sub_mod_tangential.cpp  gran_sub_mod_twisting.cpp  gran_sub_mod_twisting.h  granular_model.cpp  pair_granular.cpp
src/H5MD/: Install.sh
src/INTEL/: README  verlet_lrt_intel.cpp  verlet_lrt_intel.h
tools/phonon/tricubic/: CMakeLists.txt
unittest/: CMakeLists.txt
unittest/utils/: CMakeLists.txt  fft_introspection.h  fft_test_helpers.h  test_fft3d.cpp  test_fft3d_kokkos.cpp  test_json.cpp  test_nbody_bigint.cpp  test_nbody_mpi.cpp  test_platform.cpp
(+610 files in other folders)
